# xts_dcts

./: BUILD.gn  README.en.md  README.md  README_ZH.md  build.py  build.sh  bundle.json  ci_uncompile_suite.json  test_packages.gni  test_targets.gni
ability/: BUILD.gn
ability/dmsfwk/dmsfwk/: BUILD.gn  Test.json
ability/dmsfwk/dmsfwk/signature/: openharmony_sx.p7b
ability/dmsfwk/dmsfwkserver/: BUILD.gn  Test.json  build-profile.json5
ability/dmsfwk/dmsfwkserver/AppScope/: app.json5
ability/dmsfwk/dmsfwkserver/signature/: openharmony_sx.p7b
ability/dmsfwk/dmsfwkstageserver/: BUILD.gn  build-profile.json5
ability/dmsfwk/dmsfwkstageserver/AppScope/: app.json  app.json5
ability/dmsfwk/dmsfwkstageserver/signature/: openharmony_sx.p7b
communication/: BUILD.gn
communication/dsoftbus/rpc/: BUILD.gn  Test.json  build-profile.json5  hvigorfile.ts  oh-package.json5
communication/dsoftbus/rpc/entry/: build-profile.json5  hvigorfile.ts  oh-package.json5
communication/dsoftbus/rpc/hvigor/: hvigor-config.json5
communication/dsoftbus/rpc/signature/: openharmony_sx.p7b
communication/dsoftbus/rpc_server/: BUILD.gn  Test.json
communication/dsoftbus/rpc_test/: Test.json
communication/dsoftbus/rpcserver/: BUILD.gn  Test.json  build-profile.json5
communication/dsoftbus/rpcserver/AppScope/: app.json  app.json5
communication/dsoftbus/rpcserver/hvigor/: hvigor-config.json5
communication/dsoftbus/rpcserver/signature/: openharmony_sx.p7b
communication/dsoftbus_request/rpc/: BUILD.gn  Test.json  build-profile.json5
communication/dsoftbus_request/rpc/signature/: openharmony_sx.p7b
communication/dsoftbus_request/rpcserver/: BUILD.gn  Test.json  build-profile.json5
communication/dsoftbus_request/rpcserver/AppScope/: app.json  app.json5
communication/dsoftbus_request/rpcserver/signature/: openharmony_sx.p7b
communication/dsoftbus_rpcets/rpcclient/: BUILD.gn  Test.json  build-profile.json5
communication/dsoftbus_rpcets/rpcclient/AppScope/: app.json  app.json5
communication/dsoftbus_rpcets/rpcclient/signature/: openharmony_sx.p7b
communication/dsoftbus_rpcets/rpcserver/: BUILD.gn  build-profile.json5  hvigorw.bat
communication/dsoftbus_rpcets/rpcserver/AppScope/: app.json  app.json5
communication/rpc_static/RPCTaiheServerTestStatic/: BUILD.gn  build-profile.json5  code-linter.json5
communication/rpc_static/RPCTaiheServerTestStatic/AppScope/: app.json5
communication/rpc_static/RPCTaiheServerTestStatic/signature/: openharmony_sx.p7b
communication/rpc_static/RPCTaiheTestStatic/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
communication/rpc_static/RPCTaiheTestStatic/entry/: oh-package.json5
communication/rpc_static/RPCTaiheTestStatic/signature/: openharmony_sx.p7b
communication/softbus_standard/common/: SoftBus_Test_Permission.cpp  SoftBus_Test_Permission.h  net_trans_common.c  net_trans_common.h  socket_common.c  socket_common.h  softbus_test_permission.cpp  softbus_test_permission.h  wifi_utils.cpp  wifi_utils.h
communication/softbus_standard/dsoftbusTest/: BUILD.gn  Test.json  cpfile.sh  dsoftbusTest.cpp
communication/softbus_standard/network/: BUILD.gn  Net_Bindself_Func_Test.cpp
communication/softbus_standard/network/src/: Net_Bindself_Func_Test.cpp  net_bindself_func_test.cpp
communication/softbus_standard/socket_trans/server/: BUILD.gn  SocketTestServer.cpp  Test.json  cpfile.sh
communication/softbus_standard/transmission/: BUILD.gn  Test.json
communication/softbus_standard/transmission/reliability/: BUILD.gn  Test.json  trans_reliability_test.cpp
communication/softbus_standard/transmission/sendfile/: BUILD.gn  Test.json  trans_file_func_test.cpp
communication/softbus_standard/transmission/sendmsg/: BUILD.gn  Test.json  trans_func_test.cpp
communication/softbus_standard/transmission/sendstream/: BUILD.gn  Test.json  trans_stream_test.cpp
communication/softbus_standard/transmission/sessionmgt/: BUILD.gn  Test.json  trans_session_func_test.cpp
communication/softbus_standard/transmission/src/: trans_file_func_test.cpp  trans_func_test.cpp  trans_session_func_test.cpp
distributeddatamgr/: BUILD.gn
distributeddatamgr/cpptest/distributed_kv_store/: BUILD.gn  disdata_func_test.cpp
distributeddatamgr/cpptest/process_common/: process_msg.cpp  process_msg.h
distributeddatamgr/distributed_kv_store/: BUILD.gn  Test.json  disdata_func_test.cpp
distributeddatamgr/jstest/distributed_data_object_stage/client/: BUILD.gn  Test.json  build-profile.json5  oh-package.json5
distributeddatamgr/process_common/: process_msg.cpp  process_msg.h
distributedhardware/distributedaudiodelaytest/: BUILD.gn  Test.json  daudio_automat_delay_test.cpp  distributedaudiodelaytest.cpp  distributedaudiodelaytest.h
distributedhardware/distributedaudionewtest/: BUILD.gn  Test.json  daudio_automat_test.cpp  distributedaudiotest.cpp  distributedaudiotest.h
distributedhardware/distributedaudiotest/: BUILD.gn  Test.json  daudio_automat_test.cpp  distributedaudiotest.cpp  distributedaudiotest.h
distributedhardware/distributedcameratest/: BUILD.gn  Test.json  dcamera_automat_test.cpp  dcamera_client_test.cpp  dcamera_client_test.h  dcamera_hdf_demo.cpp  dcamera_hdf_demo.h  stream_customer.cpp  stream_customer.h
distributedhardware/distributeddeviceprofile/: BUILD.gn  Test.json  disdevprofile_test.cpp  disdevprofile_test.h  distributeddeviceprofiletest.cpp
distributedhardware/distributeddptest/: BUILD.gn  Test.json  device_profile_test.cpp
distributedhardware/distributedinputtest/: BUILD.gn  Test.json  distributed_input_test.cpp  distributed_input_test.h
distributedhardware/distributedscreentest/: BUILD.gn  Test.json  decoder_demo.cpp  decoder_demo.h  dsreen_automat_test.cpp  test.cpp
multimedia/avsessionserver/: BUILD.gn  Test.json  build-profile.json5
multimedia/avsessionserver/AppScope/: app.json  app.json5
multimedia/avsessionserver/signature/: openharmony_sx.p7b
server/disServer/: BUILD.gn  net_trans_common.cpp  net_trans_common.h  softbus_permission.cpp  softbus_test_permission.cpp  softbus_test_permission.h
(+802 files in other folders)
