# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")

all_test_targets = [
  "${DCTS_ROOT}/distributedhardware:distributedhardware",
  "${DCTS_ROOT}/distributeddatamgr:distributeddatatest",
  "${DCTS_ROOT}/communication:communication",
  "${DCTS_ROOT}/filemanagement:filemanagement",
  "${DCTS_ROOT}/ability:ability",
  "${DCTS_ROOT}/multimedia:multimedia",
]

all_test_targets_ivi = [
  # add dcts for ivi here
  # "${DCTS_ROOT}/multimedia:multimedia_ivi",
]

all_test_targets_intellitv = [
  # add dcts for intellitv here
  #"${DCTS_ROOT}/multimedia:multimedia_intellitv",
]

all_test_targets_wearable = [
  # add dcts for wearable here
  #"${DCTS_ROOT}/multimedia:multimedia_wearable",
]
