# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos_var.gni")
group("communication") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "dsoftbus/rpc:DctsRpcJsTest",
      "dsoftbus/rpcserver:DctsRpcJsServer",
      #"softbus_standard/dsoftbusTest:dsoftbusTest",
      "softbus_standard/transmission/reliability:DctsSoftBusTransReliabilityTest",
      "softbus_standard/transmission/sendfile:DctsSoftBusTransFileFunTest",
      "softbus_standard/transmission/sendmsg:DctsSoftBusTransFunTest",
      "softbus_standard/transmission/sendstream:DctsSoftBusTransStreamFunTest",
      "softbus_standard/transmission/sessionmgt:DctsSoftBusTransSessionFunTest",
    ]
  } else {
    deps = [ "wifi_standard:ActsWifiJSTest" ]
  }
}
