# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
group("distributeddatatest") {
  testonly = true
  if (is_standard_system) {
    deps = [
      "jstest/distributed_data_object/client/hap:distributedobjectdisjs_test",
      "jstest/distributed_data_object/server/hap:distributedobjectdisjs_server",
      "jstest/distributed_kv_store/client/hap:distributekvdisjs_test",
      "jstest/distributed_kv_store/server/hap:distributekvdisjs_server",
      "jstest/distributed_rdb_store/client/hap:distributerdbdisjs_test",
      "jstest/distributed_rdb_store/server/hap:distributerdbdisjs_server",
    ]
  }
}
