# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//test/xts/tools/build/suite.gni")

module_output_path = "dcts/distributedhardware"

ohos_moduletest_suite("SubDctsdisAudioDelayTest") {
  module_out_path = module_output_path
  include_dirs = [
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/common/log/include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/utils/include/log",
    "$base_root/foundation/multimedia/audio_framework/frameworks/native/audioutils/include",
    "$base_root/foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "$base_root/foundation/multimedia/audio_framework/services/audio_service/client/include",
  ]

  sources = [
    "daudio_automat_delay_test.cpp",
    "distributedaudiodelaytest.cpp",
  ]

  deps = [
    "$base_root/foundation/multimedia/audio_framework/frameworks/native/audioutils:audio_utils",
    "$base_root/foundation/multimedia/audio_framework/services/audio_service:audio_client",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SubDctsdisAudioDelayTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  install_enable = true
  part_name = "audio_framework"
  subsystem_name = "multimedia"
}
