# Copyright (C) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("$base_root/test/xts/tools/build/suite.gni")

module_output_path = "dcts/distributedhardware"

ohos_moduletest_suite("SubDctsdisAudioNewTest") {
  module_out_path = module_output_path
  include_dirs = [
    "$base_root/drivers\peripheral\audio\interfaces\include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/common/log/include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/utils/include/log",
    "$base_root/foundation/distributedhardware/distributed_audio/common/include",
    "$base_root/foundation/multimedia/audio_framework/frameworks/native/audiopolicy/include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/common/utils/include",
    "$base_root/foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocapturer/include",
    "$base_root/foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "$base_root/foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer/include",
    "$base_root/foundation/multimedia/audio_framework/interfaces/inner_api/native/audiomanager/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audioclient/micclient/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audioclient/spkclient/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiocontrol/controlsink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audioprocessor/interface",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiotransport/interface",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiotransport/receiverengine/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiotransport/senderengine/include",
    "$base_root/foundation/distributedhardware/distributed_audio/interfaces/inner_kits/native_cpp/audio_sink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/interfaces/inner_kits/native_cpp/audio_source/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiomanager/managersink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiomanager/servicesink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiomanager/test/unittest/managersink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiomanager/test/unittest/servicesink/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/common/audiodata/include",
    "$base_root/foundation/distributedhardware/distributed_audio/services/common/audioeventcallback",
    "$base_root/foundation/distributedhardware/distributed_audio/services/common/audioparam",
    "$base_root/foundation/communication/dsoftbus/dsoftbus_enhance/test/tool/softbus_tool/include",
    "$base_root/base/security/access_token/interfaces/innerkits/token_setproc/include",
    "$base_root/base/security/access_token/interfaces/innerkits/accesstoken/include",
    "$base_root/foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "$base_root/third_party/cJSON",
  ]

  sources = [
    "daudio_automat_test.cpp",
    "distributedaudiotest.cpp",
  ]

  deps = [
    "$base_root/base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "$base_root/base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "$base_root/drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils",
    "$base_root/foundation/communication/dsoftbus/core/common:softbus_utils",
    "$base_root/foundation/distributedhardware/distributed_audio/services/audiomanager/servicesink:distributed_audio_sink",
    "$base_root/third_party/cJSON:cjson",
    "$base_root/third_party/googletest:gmock",
    "$base_root/third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
    "dsoftbus:softbus_client",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SubDctsdisAudioNewTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  subsystem_name = "distributedhardware"
  part_name = "distributed_audio"
}
