# Copyright (C) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//test/xts/tools/build/suite.gni")

module_output_path = "dcts/distributedhardware"

ohos_moduletest_suite("DctsSubAudioTest") {
  module_out_path = module_output_path
  include_dirs = [
    "$base_root/drivers\peripheral\audio\interfaces\include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/common/log/include",
    "$base_root/drivers/peripheral/distributed_audio/hdi_service/common/include",
    "$base_root/foundation/distributedhardware/distributed_hardware_fwk/utils/include/log",
    "$base_root/foundation/distributedhardware/distributed_audio/common/include",
  ]

  sources = [
    "daudio_automat_test.cpp",
    "distributedaudiotest.cpp",
  ]

  deps = [ "$base_root/drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "drivers_interface_distributed_audio:libdaudio_proxy_1.0",
    "hdf_core:libhdf_utils",
    "hilog:libhilog",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DctsSubAudioTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  install_enable = true
  install_images = [ chipset_base_dir ]
  subsystem_name = "distributedhardware"
  part_name = "distributed_audio"
}
