# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//test/xts/tools/build/suite.gni")
module_output_path = "dcts/hdf"

config("dcamera_hdf_demo_config") {
  visibility = [ ":*" ]
}

ohos_moduletest_suite("DctsdisCameraTest") {
  module_out_path = module_output_path
  install_enable = true
  sources = [
    "dcamera_automat_test.cpp",
    "dcamera_hdf_demo.cpp",
    "stream_customer.cpp",
  ]

  include_dirs = [
    "./include",
    "//drivers/peripheral/distributed_camera/hdi_service/include/dcamera_host",
    "//drivers/peripheral/distributed_camera/hdi_service/include/dcamera_device",
    "//drivers/peripheral/distributed_camera/hdi_service/include/dstream_operator",
    "//drivers/peripheral/distributed_camera/hdi_service/include/dstream_provider",
    "//drivers/peripheral/distributed_camera/hdi_service/include/utils",
    "//drivers/hdf_core/framework/include/utils",
    "//drivers/hdf_core/adapter/uhdf2/include/hdi",
    "//drivers/hdf_core/adapter/uhdf2/osal/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//drivers/peripheral/camera/hal/utils",
    "//drivers/peripheral/camera/hal/include",
  ]

  deps = [
    "//drivers/hdf_core/adapter/uhdf2/hdi:libhdi",
    "//drivers/hdf_core/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "//drivers/peripheral/camera/interfaces/metadata:metadata",
    "//drivers/peripheral/distributed_camera/hdi_service:libdistributed_camera_hdf_service_1.0",
    "//third_party/jsoncpp:jsoncpp",
  ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  external_deps = [
    "drivers_interface_camera:libcamera_proxy_1.0",
    "graphic_chipsetsdk:surface",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DCameraHdfTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  cflags_cc = cflags
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_distributed_camera"
}
