# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//test/xts/tools/build/suite.gni")
module_output_path = "dcts/hdf"

config("dcamera_hdf_demo_config") {
  visibility = [ ":*" ]
}

ohos_moduletest_suite("DctsSubdisCameraTest") {
  module_out_path = module_output_path
  install_enable = true
  sources = [
    "dcamera_automat_test.cpp",
    "dcamera_hdf_demo.cpp",
    "stream_customer.cpp",
  ]

  include_dirs = [
    "./include",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service/include/dcamera_host",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service/include/dcamera_device",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service/include/dstream_operator",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service/include/dstream_provider",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service/include/utils",
    "$base_root/drivers/hdf_core/framework/include/utils",
    "$base_root/drivers/hdf_core/adapter/uhdf2/include/hdi",
    "$base_root/drivers/hdf_core/adapter/uhdf2/osal/include",
    "$base_root/drivers/peripheral/display/interfaces/include",
    "$base_root/drivers/peripheral/camera/interfaces/include",
    "$base_root/drivers/peripheral/camera/vdi_base/common/utils",
    "$base_root/drivers/peripheral/camera/vdi_base/common/include",
  ]

  deps = [
    "$base_root/drivers/hdf_core/adapter/uhdf2/hdi:libhdi",
    "$base_root/drivers/hdf_core/adapter/uhdf2/ipc:libhdf_ipc_adapter",
    "$base_root/drivers/peripheral/distributed_camera/hdi_service:libdistributed_camera_hdf_service_1.1",
    "$base_root/third_party/jsoncpp:jsoncpp",
  ]

  cflags = [
    "-fPIC",
    "-Wall",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_camera:libbuffer_producer_sequenceable_1.0",
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_camera:metadata",
    "drivers_interface_display:libdisplay_composer_proxy_1.0",
    "drivers_interface_display:libhdifd_parcelable",
    "graphic_surface:surface",
    "hdf_core:libhdf_ipc_adapter",
    "hdf_core:libhdf_utils",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_single",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DctsSubdisCameraTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  cflags_cc = cflags
  subsystem_name = "hdf"
  part_name = "drivers_peripheral_distributed_camera"
}
