# Copyright (C) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//test/xts/tools/build/suite.gni")

module_output_path = "dcts/distributeddeviceprofile"

config("device_info_manager_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "include/authority",
    "include/devicemanager",
    "include/contentsensor",
    "include/dbstorage",
    "include/dfx",
    "include/subscribemanager",
    "${device_profile_path}/common/include",
    "${device_profile_innerkits}/core/include",
    "${device_profile_service}/core/include",
    "//third_party/json/include",
  ]
}
ohos_moduletest_suite("SubDistributedDeviceProfile") {
  module_out_path = module_output_path
  sources = [
    "disdevprofile_test.cpp",
    "distributeddevicesprofiletest.cpp",
  ]

  deps = [
    "$base_root/drivers/hdf_core/adapter/uhdf2/utils:libhdf_utils",
    "${device_profile_innerkits}/core:distributed_device_profile_client",
    "${device_profile_service}/core:distributed_device_profile",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken",
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "device_suth:deviceauth_sdk",
    "distributed_device_profile_service",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "safwk:system_ability_fwk",
    "service_characteristic_profile",
    "syscap_codec:syscap_interface_shared",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"SubDeviceProfile\"",
    "LOG_DOMAIN=0xD004100",
  ]

  install_enable = true
  subsystem_name = "DistributedDeviceProfile"
  part_name = "device_info_manager"
}
