# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

base_root = "../../../../../"
import("//test/xts/tools/build/suite.gni")
module_out_path = "dcts/distributedhardware"

ohos_moduletest_suite("DctsSubDistributedDpTest") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  module_out_path = module_out_path
  include_dirs = [
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/contentsensormanager",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/deviceprofilemanager",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/deviceprofilemanager/listener",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/dfx",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/dm_adapter",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/permissionmanager",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/persistenceadapter",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/persistenceadapter/kvadapter",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/persistenceadapter/rdbadapter",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/subscribeprofilemanager",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/trustprofilemanager",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core/include/utils",
    "$base_root/foundation/deviceprofile/device_info_manager/common/include/constants",
    "$base_root/foundation/deviceprofile/device_info_manager/common/include/interfaces",
    "$base_root/foundation/deviceprofile/device_info_manager/common/include/utils",
    "$base_root/foundation/deviceprofile/device_info_manager/radar/include",
  ]

  sources = [ "device_profile_test.cpp" ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DctsSubDistributedDpTest\"",
    "LOG_DOMAIN=0xD004100",
  ]

  deps = [
    "$base_root/foundation/deviceprofile/device_info_manager/common:distributed_device_profile_common",
    "$base_root/foundation/deviceprofile/device_info_manager/interfaces/innerkits/core:distributed_device_profile_sdk",
    "$base_root/foundation/deviceprofile/device_info_manager/services/core:distributed_device_profile_svr",
    "$base_root/third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "c_utils:utils",
    "device_auth:deviceauth_sdk",
    "device_manager:devicemanagersdk",
    "dmsfwk:common_sdk",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "relational_store:native_rdb",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "syscap_codec:syscap_interface_shared",
  ]

  part_name = "device_info_manager"
  subsystem_name = "deviceprofile"
}
